# Software-Renderer---Weird-Visual-Chaos-Engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.windows  README.md
src/: fractal_system.cpp  fractal_system.h  fractals.cpp  fractals.h  main.cpp  pixelbuffer.cpp  pixelbuffer.h  utils.cpp  utils.h  weird_entities.cpp  weird_entities.h
